added http/2 figure and curl flag description

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -82,11 +82,16 @@ To censor a request, censors inject TCP RST packets, HTTP block pages, or null-r
 
 ### HTTP/2
 <!--General HTTP/2 and its different because byte based -->
-<!-- TODO: include HTTP/2 request to make clear nothing really changed except byte based-->
 As outlined above, HTTP/1.1 censorship has been widely analyzed.
 Nevertheless, there is a lack of research for the newer version: HTTP/2&nbsp;<d-cite key="RFC9113"/>.
-HTTP/2 maintains the same semantics as its predecessor: it uses the same port numbers, runs over TCP, and most importantly it conveys the request path and accessed domain name unencrypted.
-Despite these similarities, HTTP/2 introduced a major change by switching from a text-based format to a binary format.
+HTTP/2 maintains the same semantics as its predecessor: it uses the same port numbers, runs over TCP, and most importantly it conveys the request path and accessed domain name unencrypted as depicted in the exemplary HTTP/2 request below.
+```
+:method              GET
+:scheme              HTTP
+:host                <censored_domain>
+:path                <request_path>
+```
+Despite its similarities to HTTP/1.1, HTTP/2 introduced a major change by switching from a text-based format to a binary format.
 While HTTP/2 is still easily censorable due to missing encryption, HTTP/2's binary format complicates censors' efforts as it requires different parsing mechanisms.
 
 To facilitate the upgrade from HTTP/1.1 to HTTP/2, clients can use either of two mechanisms: they can simply connect with HTTP/2 (Prior Knowledge) or upgrade an existing HTTP/1.1 connection (Upgrade Mechanism).
@@ -142,7 +147,9 @@ Then, we outline existing server support for unencrypted HTTP/2.
 ### Censorship
 In China, HTTP/1.1 is censored with a combination of different TCP RST packets with the ACK flag set or not, depending on the specific domain.
 In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
-HTTP/1.1 censorship in China and Iran can be triggered with a simple curl command (`curl http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162`).
+HTTP/1.1 censorship in China and Iran can be triggered with the curl command 
+`curl http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162`.
+The `--resolve` flag prevents possible DNS censorship from interferring.
 
 While HTTP/1.1 is censored in China in Iran, we detected that HTTP/2 with prior knowledge is not censored at all in both countries.
 For any domain censored over HTTP/1.1, the equivalent HTTP/2 requests were not censored in our evaluations.
