spelling and grammar

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -73,7 +73,7 @@ In this section, we provide background information on HTTP and its censorship. W
 HTTP can be considered _the_ protocol for accessing websites on the Internet.
 While HTTP is usually used in conjunction with TLS, censorship of the plain HTTP protocol is still present and prior research analyzed the most common version HTTP/1.1&nbsp;<d-cite key="RFC9112"/> extensively&nbsp;<d-cite key="harrity_GETOutAutomated_2022,jin_UnderstandingPracticesGlobal_2021,bock_DetectingEvadingCensorshipinDepth_2020"/>.
 These works discovered that censors such as the ones in China and Iran use information in the Host header and request path to determine whether an HTTP request should be censored.
-The examplary HTTP/1.1 GET request below shows that the requested path and domain name can be easily extracted by a censor:
+The HTTP/1.1 GET request below shows that the requested path and domain name can be easily extracted by a censor:
 ```
 GET /<request path> HTTP/1.1  
 Host: <censored_domain>
@@ -94,7 +94,7 @@ HTTP/2 maintains the same semantics as its predecessor: it uses the same port nu
 Despite its similarities to HTTP/1.1, HTTP/2 introduced a major change by switching from a text-based format to a binary format.
 While HTTP/2 is still easily censorable due to missing encryption, HTTP/2's binary format complicates censors' efforts as it requires different parsing mechanisms.
 
-To facilitate the upgrade from HTTP/1.1 to HTTP/2, clients can use either of two mechanisms: they can simply connect with HTTP/2 (Prior Knowledge) or upgrade an existing HTTP/1.1 connection (Upgrade Mechanism).
+To facilitate the upgrade from HTTP/1.1 to HTTP/2, clients can use either of two mechanisms: connect with HTTP/2 (Prior Knowledge) or upgrade an existing HTTP/1.1 connection (Upgrade Mechanism).
 Below, we describe both mechanisms.
 
 #### Prior Knowledge
@@ -105,7 +105,7 @@ Then, the client sends the so-called connection preface, followed by a **SETTING
 This connection preface was specifically defined to trigger errors on HTTP servers without HTTP/2 support.
 The **SETTINGS** frame contains additional configuration parameters for the connection.
 After sending the connection preface and **SETTINGS** frame, the client sends its HTTP/2 request.
-If the server supports HTTP/2, it responds with its own connection preface, containing a **SETTINGS** frame and answers the client's HTTP/2 request with an HTTP/2 response.
+If the server supports HTTP/2, it responds with its own connection preface, containing a **SETTINGS** frame, and answers the client's HTTP/2 request with an HTTP/2 response.
 
 #### Upgrade Mechanism
 <!-- Upgrade -->
@@ -119,7 +119,7 @@ Upgrade: h2c
 HTTP2-Settings: <base64url encoding of HTTP/2 SETTINGS payload>
 ```
 If the server supports the upgrade mechanism, it responds with a 101 status code, indicating **Switching Protocols**, and then transitions to an HTTP/2 connection.
-An example successful server answer can look like this:
+An example of a successful server answer can look like this:
 ```
 HTTP/1.1 101 Switching Protocols
 Connection: Upgrade
@@ -127,14 +127,14 @@ Upgrade: h2c
 [ HTTP/2 answer for "GET /" ... ]
 ```
 Initially defined by RFC 7540&nbsp;<d-cite key="RFC7540"/>, the upgrade mechanism has been deprecated since RFC 9113&nbsp;<d-cite key="RFC9113"/> as it was not widely adopted.
-It is also less fit for censorship circumvention than prior knowledge as it involves a HTTP/1.1 request that is caught by HTTP censors that do not support HTTP/2.
+It is also less fit for censorship circumvention than prior knowledge as it involves an HTTP/1.1 request that is caught by HTTP censors that do not support HTTP/2.
 
 ### Research Gap
 <!-- HTTP/2 in general only used encrypted but WHAT IF? -->
 In the context of censorship, HTTP/2 has not been analyzed extensively.
 In this blogpost, we analyze HTTP/2's viability as a censorship circumvention technique and show the following.
 1. HTTP/2 is uncensored in China and Iran, two countries that widely employ HTTP/1.1 censorship.
-2. Up to 6.28% of server support unencrypted HTTP/2, with smaller servers and censored domains showing higher support than large websites. 
+2. Up to 6.28% of servers support unencrypted HTTP/2, with smaller servers and censored domains showing higher support than large websites. 
 3. Unencrypted HTTP/1.1 is still supported by around 20% of servers.
 4. To easily analyze a server for its unencrypted HTTP support, we provide the tool [`Does-It-Support-Unencrypted-Http`](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http).
 
@@ -149,9 +149,9 @@ In China, HTTP/1.1 is censored with a combination of different TCP RST packets w
 In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
 HTTP/1.1 censorship in China and Iran can be triggered with the curl command 
 `curl http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162`.
-The `--resolve` flag prevents possible DNS censorship from interferring.
+The `--resolve` flag prevents possible DNS censorship from interfering.
 
-While HTTP/1.1 is censored in China in Iran, we detected that HTTP/2 with prior knowledge is not censored at all in both countries.
+While HTTP/1.1 is censored in China and Iran, we detected that HTTP/2 with prior knowledge is not censored at all in both countries.
 For any domain censored over HTTP/1.1, the equivalent HTTP/2 requests were not censored in our evaluations.
 For instance, `curl --http2-prior-knowledge http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162` accesses a website censored over HTTP/1.1 in both countries.
 In China and Iran, any server that supports unencrypted HTTP/2 can be accessed without interference from existing HTTP censorship. 
@@ -194,8 +194,8 @@ The following table shows how many domains from each list were reachable and cou
 </table><br>
 
 Notably, the number of domains for each scan changes slightly because of temporarily unavailable websites.
-To each website that was reachable we sent a GET request on the path `/` with either HTTP/1.1, HTTP/2 prior knowledge or the HTTP/2 upgrade mechanism.
-We followed all redirects to other HTTP websites and considered a server to support the used HTTP version if it reponded with an `200 OK` using the desired HTTP version.
+To each reachable website, we sent a GET request on the path `/` with either HTTP/1.1, HTTP/2 prior knowledge, or the HTTP/2 upgrade mechanism.
+We followed all redirects to other HTTP websites and considered a server to support the used HTTP version if it responded with a `200 OK` using the desired HTTP version.
 The following table shows the number of domains that support HTTP/1.1, HTTP/2 prior knowledge, and the HTTP/2 upgrade mechanism.
 
 <table style="margin: 0 auto; text-align:center">
@@ -229,7 +229,7 @@ The following table shows the number of domains that support HTTP/1.1, HTTP/2 pr
 </tbody>
 </table><br>
 
-Below, we detail our test vectors and servers' support for each HTTP version we evalauted.
+Below, we detail our test vectors and servers' support for each HTTP version we evaluated.
 
 #### Unencrypted HTTP/1.1 Support
 During the unencrypted HTTP/1.1 support scan, we sent the following test vector for all domains:
@@ -252,8 +252,8 @@ User-Agent: Mozilla/5.0 (...) Gecko/20100101 Firefox/127.0
 ```
 
 The HTTP/2 with prior knowledge support varies between 2.5% and 6.28%, depending on the domain list. 
-Importantly, censored domains from the CitizenLab lists show higher support for HTTP/2 prio knowledge than popular domains from the Tranco top one million list.
-This shows that while servers' support for HTTP/2 prior knowledge is lower than for HTTP/1.1 across all lists, a considerable amount of censored domains supports unencrypted HTTP/2.
+Importantly, censored domains from the CitizenLab lists show higher support for HTTP/2 prior knowledge than popular domains from the Tranco top one million list.
+This shows that while servers' support for HTTP/2 prior knowledge is lower than for HTTP/1.1 across all lists, a considerable number of censored domains support unencrypted HTTP/2.
 
 #### Unencrypted HTTP/2 with Upgrade Mechanism Support
 During the unencrypted HTTP/2 with upgrade mechanism scan, we sent the following HTTP/1.1 request as a test vector for all domains:
