Small typesetting fixes

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -50,7 +50,7 @@ toc:
     - name: Conclusion
 
 ---
-*Authors in alphabetical order - all contributed equally
+*Authors in alphabetical order -- all contributed equally
 
 ## Abstract
 Censors worldwide have long censored unencrypted HTTP traffic.
@@ -202,7 +202,7 @@ The following table shows the number of domains that support HTTP/1.1, HTTP/2 pr
 <thead>
 <tr class="header">
 <th style="text-align: left;"><span>List</span></th>
-<th style="text-align: left;"><span>HTTP/1.1</span></th>
+<th style="text-align: right;"><span>HTTP/1.1</span></th>
 <th style="text-align: right;"><span>HTTP/2 Prior Knowledge</span></th>
 <th style="text-align: right;"><span>HTTP/2 Upgrade Mechanism</span></th>
 </tr>
@@ -274,7 +274,7 @@ This is unsurprising as RFC 9113&nbsp;<d-cite key="RFC9113"/> deprecated this me
 Across all scanned HTTP versions, support for unencrypted HTTP varied widely across the Tranco top one million list.
 Below, we depict servers's support for the different HTTP versions across the Tranco top 1 million list.
 
-<img src="/assets/img/2024/http2/tranco.svg" alt="Unencrypted HTTP support by servers from the Tranco Top 1 Million list.">
+![Unencrypted HTTP support by servers from the Tranco Top 1 Million list.](/assets/img/2024/http2/tranco.svg){: width="80%" style="display: block; margin: 0 auto"}
 <div class="caption">
 Unencrypted HTTP support by servers from the Tranco Top 1 Million list. Unencrypted HTTP/2 support increases for less accessed websites, contrasting unencrypted HTTP/1.
 </div>
