--- a/assets/bibliography/http2.bib
+++ b/assets/bibliography/http2.bib
@@ -1,5 +1,5 @@
 @techreport{RFC7540,
-  title = {{Hypertext Transfer Protocol Version 2 (HTTP/2)}},
+  title = {Hypertext Transfer Protocol Version 2 (HTTP/2)},
   author = {Belshe, M. and Peon, R. and Thomson, M.},
   type = {RFC},
   number = {7540},
@@ -10,7 +10,7 @@
 }
 
 @techreport{RFC9112,
-  title = {{HTTP/1.1}},
+  title = {HTTP/1.1},
   author = {Fielding, R. and Nottingham, M. and Reschke, J.},
   type = {RFC},
   number = {9112},
@@ -21,7 +21,7 @@
 }
 
 @techreport{RFC9113,
-  title = {{HTTP/2}},
+  title = {HTTP/2},
   author = {Thomson, M. and Benfield, C.},
   type = {RFC},
   number = {9113},
@@ -33,10 +33,10 @@
 
 @inproceedings{harrity_GETOutAutomated_2022,
 	address = {Boston, MA},
-	title = {{GET} /out: {Automated} discovery of {Application}-{Layer} censorship evasion strategies},
+	title = {GET /out: Automated discovery of Application-Layer censorship evasion strategies},
 	isbn = {978-1-939133-31-1},
 	url = {https://www.usenix.org/conference/usenixsecurity22/presentation/harrity},
-	booktitle = {31st {USENIX} security symposium ({USENIX} security 22)},
+	booktitle = {31st USENIX security symposium (USENIX security 22)},
 	publisher = {USENIX Association},
 	author = {Harrity, Michael and Bock, Kevin and Sell, Frederick and Levin, Dave},
 	month = aug,
@@ -45,7 +45,7 @@
 }
 
 @article{jin_UnderstandingPracticesGlobal_2021,
-	title = {Understanding the {Practices} of {Global} {Censorship} through {Accurate}, {End}-to-{End} {Measurements}},
+	title = {Understanding the Practices of Global Censorship through Accurate, End-to-End Measurements},
 	volume = {5},
 	url = {https://dl.acm.org/doi/10.1145/3491055},
 	doi = {10.1145/3491055},
@@ -61,9 +61,9 @@
 }
 
 @inproceedings{bock_DetectingEvadingCensorshipinDepth_2020,
-	title = {Detecting and evading {Censorship}-in-{Depth}: a case study of {Iran}’s protocol whitelister},
+	title = {Detecting and evading Censorship-in-Depth: a case study of Iran’s protocol whitelister},
 	url = {https://www.usenix.org/conference/foci20/presentation/bock},
-	booktitle = {10th {USENIX} workshop on free and open communications on the internet ({FOCI} 20)},
+	booktitle = {10th USENIX workshop on free and open communications on the internet (FOCI 20)},
 	publisher = {USENIX Association},
 	author = {Bock, Kevin and Fax, Yair and Reese, Kyle and Singh, Jasraj and Levin, Dave},
 	month = aug,
@@ -71,13 +71,13 @@
 }
 
 @inproceedings{bock_YourCensorMy_2021,
-	title = {Your {Censor} is {My} {Censor}: {Weaponizing} {Censorship} {Infrastructure} for {Availability} {Attacks}},
-	shorttitle = {Your {Censor} is {My} {Censor}},
+	title = {Your Censor is My Censor: Weaponizing Censorship Infrastructure for Availability Attacks},
+	shorttitle = {Your Censor is My Censor},
 	url = {https://ieeexplore.ieee.org/abstract/document/9474303},
 	doi = {10.1109/SPW53761.2021.00059},
 	abstract = {Nationwide Internet censorship threatens free and open access to communication and information for millions of users living inside of censoring regimes. In this paper, we show that this poses an even greater threat to the Internet than previously understood. We demonstrate an off-path attack that exploits a little-studied but widespread feature of many censoring infrastructures: residual censorship, in which a censor continues blocking traffic between two end-hosts for some time after a censorship event. Our attack sends spoofed packets with censored content, keeping two victim end-hosts separated by a censor from being able to communicate with one another. Although conceptually simple, this attack has several challenges, which we address. We demonstrate the feasibility of the attack through two studies: one to capture the current state of residual censorship, and another to actually launch the attack (against machines we control). We show that the attack can be launched despite stateful TCP tracking used by many censors, and that it also works against those who censor by null-routing. We will be making our code publicly available.},
 	urldate = {2024-05-08},
-	booktitle = {2021 {IEEE} {Security} and {Privacy} {Workshops} ({SPW})},
+	booktitle = {2021 IEEE Security and Privacy Workshops (SPW)},
 	author = {Bock, Kevin and Bharadwaj, Pranav and Singh, Jasraj and Levin, Dave},
 	month = may,
 	year = {2021},
