--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -8,32 +8,32 @@ citation: true
 authors:
   - name: Felix Lange*
     affiliations:
-        name: Paderborn University
+      name: Paderborn University
     bibtex: Lange, Felix
   - name: Niklas Niere*
     affiliations:
-        name: Paderborn University
+      name: Paderborn University
     url: https://twitter.com/JonSnowWhite2
     bibtex: Niere, Niklas
   - name: Jonathan von Niessen*
     affiliations:
-        name: Paderborn University
+      name: Paderborn University
     bibtex: von Niessen, Jonathan
 
 bibliography: http2.bib
 
 toc:
-    - name: Abstract
-    - name: Introduction and Background
-      subsections: 
-        - name: HTTP (Censorship)
-        - name: HTTP/2
-          subsections:
-            - name: Prior Knowledge
-            - name: Upgrade Mechanism
-        - name: Research Gap
-    - name: Results
-      subsections:
+  - name: Abstract
+  - name: Introduction and Background
+    subsections:
+      - name: HTTP (Censorship)
+      - name: HTTP/2
+        subsections:
+          - name: Prior Knowledge
+          - name: Upgrade Mechanism
+      - name: Research Gap
+  - name: Results
+    subsections:
       - name: Censorship
       - name: Server Support
         subsections:
@@ -42,17 +42,18 @@ toc:
           - name: Unencrypted HTTP/2 with Upgrade Mechanism Support
           - name: Tranco Relation
           - name: Tool for Detecting HTTP Support
-    - name: Discussion
-      subsections:
-        - name: What makes unencrypted HTTP/2 special?
-        - name: Difficulty of blocking unencrypted HTTP/2
-        - name: Circumventing Censors with unencrypted HTTP/2
-    - name: Conclusion
-
+  - name: Discussion
+    subsections:
+      - name: What makes unencrypted HTTP/2 special?
+      - name: Difficulty of blocking unencrypted HTTP/2
+      - name: Circumventing Censors with unencrypted HTTP/2
+  - name: Conclusion
 ---
-*Authors in alphabetical order -- all contributed equally
+
+\*Authors in alphabetical order -- all contributed equally
 
 ## Abstract
+
 Censors worldwide have long censored unencrypted HTTP traffic.
 In this blog post, we show that a specific HTTP version---unencrypted HTTP/2---is unaffected by censorship in China and Iran.
 We access otherwise censored websites in both countries over unencrypted HTTP/2.
@@ -61,36 +62,43 @@ To aid the community and ease future research, we provide a tool that evaluates 
 Finally, we discuss the limitations and potential of unencrypted HTTP/2 for censorship circumvention.
 We consider our finding an interesting addition to current censorship circumvention techniques.
 
-
 ## Introduction and Background
+
 In this section, we provide background information on HTTP and its censorship. We place special emphasis on HTTP/2 and its comparison to previous HTTP versions.
 
 ### HTTP (Censorship)
+
 <!--General HTTP -->
 
-
 <!-- Censorship of unencrypted HTTP -->
+
 HTTP can be considered _the_ protocol for accessing websites on the Internet.
 While HTTP is usually used in conjunction with TLS, censorship of the plain HTTP protocol is still present and prior research analyzed the most common version HTTP/1.1&nbsp;<d-cite key="RFC9112"/> extensively&nbsp;<d-cite key="harrity_GETOutAutomated_2022,jin_UnderstandingPracticesGlobal_2021,bock_DetectingEvadingCensorshipinDepth_2020"/>.
 These works discovered that censors such as the ones in China and Iran use information in the Host header and request path to determine whether an HTTP request should be censored.
 The HTTP/1.1 GET request below shows that the requested path and domain name can be easily extracted by a censor:
+
 ```
-GET /<request path> HTTP/1.1  
+GET /<request path> HTTP/1.1
 Host: <censored_domain>
 ```
+
 To censor a request, censors inject TCP RST packets, HTTP block pages, or null-route the whole connection&nbsp;<d-cite key="bock_YourCensorMy_2021"/>.
 
 ### HTTP/2
+
 <!--General HTTP/2 and its different because byte based -->
+
 As outlined above, HTTP/1.1 censorship has been widely analyzed.
 Nevertheless, there is a lack of research for the newer version: HTTP/2&nbsp;<d-cite key="RFC9113"/>.
 HTTP/2 maintains the same semantics as its predecessor: it uses the same port numbers, runs over TCP, and most importantly it conveys the request path and accessed domain name unencrypted as depicted in the exemplary HTTP/2 request below.
+
 ```
 :method              GET
 :scheme              HTTP
 :host                <censored_domain>
 :path                <request_path>
 ```
+
 Despite its similarities to HTTP/1.1, HTTP/2 introduced a major change by switching from a text-based format to a binary format.
 While HTTP/2 is still easily censorable due to missing encryption, HTTP/2's binary format complicates censors' efforts as it requires different parsing mechanisms.
 
@@ -98,7 +106,9 @@ To facilitate the upgrade from HTTP/1.1 to HTTP/2, clients can use either of two
 Below, we describe both mechanisms.
 
 #### Prior Knowledge
+
 <!--Prior knowledge -->
+
 Using prior knowledge, the client directly attempts to speak HTTP/2 with the server.
 As the initial step, the client establishes a TCP connection with the server.
 Then, the client sends the so-called connection preface, followed by a **SETTINGS** frame.
@@ -108,36 +118,44 @@ After sending the connection preface and **SETTINGS** frame, the client sends it
 If the server supports HTTP/2, it responds with its own connection preface, containing a **SETTINGS** frame, and answers the client's HTTP/2 request with an HTTP/2 response.
 
 #### Upgrade Mechanism
+
 <!-- Upgrade -->
+
 During the upgrade mechanism, the client establishes a TCP connection with the server and then sends an HTTP/1.1 request, including the Upgrade and HTTP2-Settings headers.
 An example HTTP/1.1 Upgrade request can look like this:
+
 ```
-GET / HTTP/1.1  
+GET / HTTP/1.1
 Host: server.example.com
 Connection: Upgrade, HTTP2-Settings
 Upgrade: h2c
 HTTP2-Settings: <base64url encoding of HTTP/2 SETTINGS payload>
 ```
+
 If the server supports the upgrade mechanism, it responds with a 101 status code, indicating **Switching Protocols**, and then transitions to an HTTP/2 connection.
 An example of a successful server answer can look like this:
+
 ```
 HTTP/1.1 101 Switching Protocols
 Connection: Upgrade
 Upgrade: h2c
 [ HTTP/2 answer for "GET /" ... ]
 ```
+
 Initially defined by RFC 7540&nbsp;<d-cite key="RFC7540"/>, the upgrade mechanism has been deprecated since RFC 9113&nbsp;<d-cite key="RFC9113"/> as it was not widely adopted.
 It is also less fit for censorship circumvention than prior knowledge as it involves an HTTP/1.1 request that is caught by HTTP censors that do not support HTTP/2.
 
 ### Research Gap
+
 <!-- HTTP/2 in general only used encrypted but WHAT IF? -->
+
 In the context of censorship, HTTP/2 has not been analyzed extensively.
 In this blogpost, we analyze HTTP/2's viability as a censorship circumvention technique and show the following.
+
 1. HTTP/2 is uncensored in China and Iran, two countries that widely employ HTTP/1.1 censorship.
-2. Up to 6.28% of servers support unencrypted HTTP/2, with smaller servers and censored domains showing higher support than large websites. 
+2. Up to 6.28% of servers support unencrypted HTTP/2, with smaller servers and censored domains showing higher support than large websites.
 3. Unencrypted HTTP/1.1 is still supported by around 20% of servers.
 4. To easily analyze a server for its unencrypted HTTP support, we provide the tool [`Does-It-Support-Unencrypted-Http`](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http).
-
 
 ## Results
 
@@ -145,18 +163,20 @@ In the following, we show that unencrypted HTTP/2 is not censored in China and I
 Then, we outline existing server support for unencrypted HTTP/2.
 
 ### Censorship
+
 In China, HTTP/1.1 is censored with a combination of different TCP RST packets with the ACK flag set or not, depending on the specific domain.
 In Iran, HTTP/1.1 requests are censored with a block page, a TCP RST, or null routing, depending on the specific domain.
-HTTP/1.1 censorship in China and Iran can be triggered with the curl command 
+HTTP/1.1 censorship in China and Iran can be triggered with the curl command
 `curl http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162`.
 The `--resolve` flag prevents possible DNS censorship from interfering.
 
 While HTTP/1.1 is censored in China and Iran, we detected that HTTP/2 with prior knowledge is not censored at all in both countries.
 For any domain censored over HTTP/1.1, the equivalent HTTP/2 requests were not censored in our evaluations.
 For instance, `curl --http2-prior-knowledge http://nsfwyoutube.com --resolve nsfwyoutube.com:80:208.78.226.162` accesses a website censored over HTTP/1.1 in both countries.
-In China and Iran, any server that supports unencrypted HTTP/2 can be accessed without interference from existing HTTP censorship. 
+In China and Iran, any server that supports unencrypted HTTP/2 can be accessed without interference from existing HTTP censorship.
 
 ### Server Support
+
 To determine servers' support for unencrypted HTTP, we tested domains from three lists:
 We selected domains from [Tranco top one million](https://tranco-list.eu/list/KJWPW), the CitizenLab [test list for China](https://github.com/citizenlab/test-lists/commit/80087aa), and the CitizenLab [test list for Iran](https://github.com/citizenlab/test-lists/commit/e9e3bfb).
 The Tranco top one million list contains domains popular worldwide; the Citizenlab lists contain domains censored in the respective country.
@@ -232,7 +252,9 @@ The following table shows the number of domains that support HTTP/1.1, HTTP/2 pr
 Below, we detail our test vectors and servers' support for each HTTP version we evaluated.
 
 #### Unencrypted HTTP/1.1 Support
+
 During the unencrypted HTTP/1.1 support scan, we sent the following test vector for all domains:
+
 ```
 GET / HTTP/1.1
 Host: <domain_name>
@@ -244,19 +266,23 @@ Across the three used lists, the HTTP/1.1 support varies between 18.62% and 21.5
 These results show that - surprisingly - unencrypted HTTP/1.1 is still supported by many domains.
 
 #### Unencrypted HTTP/2 with Prior Knowledge Support
+
 During the unencrypted HTTP/2 with prior knowledge scan, we sent the connection preface first and then the following test vector for all domains:
+
 ```
 GET / HTTP/2
 Host: <domain_name>
 User-Agent: Mozilla/5.0 (...) Gecko/20100101 Firefox/127.0
 ```
 
-The HTTP/2 with prior knowledge support varies between 2.5% and 6.28%, depending on the domain list. 
+The HTTP/2 with prior knowledge support varies between 2.5% and 6.28%, depending on the domain list.
 Importantly, censored domains from the CitizenLab lists show higher support for HTTP/2 prior knowledge than popular domains from the Tranco top one million list.
 This shows that while servers' support for HTTP/2 prior knowledge is lower than for HTTP/1.1 across all lists, a considerable number of censored domains support unencrypted HTTP/2.
 
 #### Unencrypted HTTP/2 with Upgrade Mechanism Support
+
 During the unencrypted HTTP/2 with upgrade mechanism scan, we sent the following HTTP/1.1 request as a test vector for all domains:
+
 ```
 GET / HTTP/1.1
 Host: <example.com>
@@ -266,7 +292,7 @@ Upgrade: h2c
 HTTP2-Settings: AAEAABAAAAIAAAABAAQAAP__AAUAAEAAAAgAAAA...
 ```
 
-The upgrade mechanism has the lowest support ranging from 0.6% to 1.74%, depending on the used domain list. 
+The upgrade mechanism has the lowest support ranging from 0.6% to 1.74%, depending on the used domain list.
 This is unsurprising as RFC 9113&nbsp;<d-cite key="RFC9113"/> deprecated this method due to its low adoption rate.
 
 #### Tranco Relation
@@ -275,20 +301,25 @@ Across all scanned HTTP versions, support for unencrypted HTTP varied widely acr
 Below, we depict servers's support for the different HTTP versions across the Tranco top 1 million list.
 
 ![Unencrypted HTTP support by servers from the Tranco Top 1 Million list.](/assets/img/2024/http2/tranco.svg){: width="80%" style="display: block; margin: 0 auto"}
+
 <div class="caption">
 Unencrypted HTTP support by servers from the Tranco Top 1 Million list. Unencrypted HTTP/2 support increases for less accessed websites, contrasting unencrypted HTTP/1.
 </div>
 
 <!-- Unencrypted HTTP/1.1 support mostly between 10 and 35%.-->
 <!--Unencrypted HTTP/2 support up to 5% for lower Tranco ranks. -->
-Interestingly, unencrypted HTTP/2 support increases for lower Tranco ranks while unencrypted HTTP/1 support increases until about 400,000 and then decreases again. 
+
+Interestingly, unencrypted HTTP/2 support increases for lower Tranco ranks while unencrypted HTTP/1 support increases until about 400,000 and then decreases again.
 This aligns with support by websites from Citizenlab list which are usually smaller than Tranco websites.
 While overall support for HTTP/2 is low, we argue that it can still be used to access certain blocked websites successfully and adds to the arsenal of censorship circumvention techniques.
+
 <!-- We discuss this further in ref discussion.-->
 
 #### Tool for Detecting HTTP Support
+
 During our analyses, we developed a tool that evaluates a website's support for unencrypted HTTP support.
 Below, we provide an exemplary output for `lgbtchinatour.com`
+
 ```
 lgbtchinatour.com analysis started.
 Server online. Scanning!
@@ -313,15 +344,17 @@ Despite this, we consider unencrypted HTTP/2 a valuable addition to current cens
 Below, we discuss the limitations and potential of unencrypted HTTP/2 as a circumvention technique.
 
 ### What makes unencrypted HTTP/2 special?
+
 HTTP/2 differs vastly from previous HTTP versions such as HTTP/1.1.
 While all HTTP versions up to and including HTTP/1.1 consist of human-readable ASCII letters, HTTP/2 is a byte-based protocol.
 This makes HTTP/2 parsers incompatible with previous HTTP parsers.
-Furthermore, HTTP/2 has been designed for encrypted usage in HTTPS. 
+Furthermore, HTTP/2 has been designed for encrypted usage in HTTPS.
 Unencrypted usage is allowed but not advertised.
 Accordingly, browsers do not implement unencrypted HTTP/2.
 We suspect that this is the reason censors do not analyze it and why the censorship circumvention community has ignored unencrypted HTTP/2.
 
 ### Difficulty of blocking unencrypted HTTP/2
+
 Censors can block HTTP/2 but face additional challenges compared to previous HTTP versions.
 For previous HTTP versions, censors could analyze the first message sent by the client to extract the connection's destination from human-readable ASCII bytes.
 In HTTP/2 the first message must not necessarily contain the connection destination forcing the censor to hold additional state and parse additional messages.
@@ -329,8 +362,8 @@ HTTP/2 also utilizes a new form of header compression which censors would have t
 We suspect that the complexity added in HTTP/2 contributed to the censors' decision not to analyze it.
 We emphasize that censors could still implement HTTP/2 censorship despite its complexity.
 
-
 ### Circumventing Censors with unencrypted HTTP/2
+
 Practically applying unencrypted HTTP/2 as a censorship circumvention technique is possible but comes with challenges.
 In this blog post, we accessed otherwise blocked resources with unencrypted HTTP/2 using curl.
 Curl's built-in support for unencrypted HTTP/2 can be used to access specific HTML sites but its usability is limited in comparison to a full-fletched web browser.
@@ -340,6 +373,7 @@ A similar proxy could be installed on the other side of the firewall, downgradin
 Overall, we consider the practical deployment of HTTP/2 as a censorship circumvention method difficult and are interested in possible approaches.
 
 ## Conclusion
+
 In summary, we introduced unencrypted HTTP/2 as a censorship circumvention method by accessing blocked resources in China and Iran.
 While server support for unencrypted HTTP/2 is low, we showed that a non-negligible number of censored websites supports it.
 To aid future evaluations of servers' support for unencrypted HTTP/2, we developed a tool and made it accessible on [GitHub](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http).
