reworked server support tables and added HTTP/2 confidentiality notes

--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -62,6 +62,8 @@ To aid the community and ease future research, we provide a tool that evaluates 
 Finally, we discuss the limitations and potential of unencrypted HTTP/2 for censorship circumvention.
 We consider our finding an interesting addition to current censorship circumvention techniques.
 
+**Note: Do not send sensitive data over unencrypted HTTP/2, it can be eavesdropped!**
+
 ## Introduction and Background
 
 In this section, we provide background information on HTTP and its censorship. We place special emphasis on HTTP/2 and its comparison to previous HTTP versions.
@@ -180,44 +182,13 @@ In China and Iran, any server that supports unencrypted HTTP/2 can be accessed w
 To determine servers' support for unencrypted HTTP, we tested domains from three lists:
 We selected domains from [Tranco top one million](https://tranco-list.eu/list/KJWPW), the CitizenLab [test list for China](https://github.com/citizenlab/test-lists/commit/80087aa), and the CitizenLab [test list for Iran](https://github.com/citizenlab/test-lists/commit/e9e3bfb).
 The Tranco top one million list contains domains popular worldwide; the Citizenlab lists contain domains censored in the respective country.
-The following table shows how many domains from each list were reachable and could be evaluated for their HTTP/1.1 and HTTP/2 support:
+Some domains were unresolvable or did not open a TCP socket; we excluded them from our evluations.
 
-<table style="margin: 0 auto; text-align:center">
-<thead>
-<tr class="header">
-<th style="text-align: left;"><span>List</span></th>
-<th style="text-align: left;"><span>HTTP/1.1</span></th>
-<th style="text-align: right;"><span>HTTP/2 Prior Knowledge</span></th>
-<th style="text-align: right;"><span>HTTP/2 Upgrade Mechanism</span></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<th style="text-align: left;"><span>Tranco Top 1M</span></th>
-<th style="text-align: right;"><span>839 375</span></th>
-<th style="text-align: right;"><span>839 393</span></th>
-<th style="text-align: right;"><span>839 374</span></th>
-</tr>
-<tr>
-<th style="text-align: left;"><span>CitizenLab China</span></th>
-<th style="text-align: right;"><span>496</span></th>
-<th style="text-align: right;"><span>496</span></th>
-<th style="text-align: right;"><span>496</span></th>
-</tr>
-<tr>
-<th style="text-align: left;"><span>CitizenLab Iran</span></th>
-<th style="text-align: right;"><span>748</span></th>
-<th style="text-align: right;"><span>749</span></th>
-<th style="text-align: right;"><span>748</span></th>
-</tr>
-</tbody>
-</table><br>
-
-Notably, the number of domains for each scan changes slightly because of temporarily unavailable websites.
 To each reachable website, we sent a GET request on the path `/` with either HTTP/1.1, HTTP/2 prior knowledge, or the HTTP/2 upgrade mechanism.
 We followed all redirects to other HTTP websites and considered a server to support the used HTTP version if it responded with a `200 OK` using the desired HTTP version.
 The following table shows the number of domains that support HTTP/1.1, HTTP/2 prior knowledge, and the HTTP/2 upgrade mechanism.
 
+<div class="l-screen">
 <table style="margin: 0 auto; text-align:center">
 <thead>
 <tr class="header">
@@ -225,6 +196,7 @@ The following table shows the number of domains that support HTTP/1.1, HTTP/2 pr
 <th style="text-align: right;"><span>HTTP/1.1</span></th>
 <th style="text-align: right;"><span>HTTP/2 Prior Knowledge</span></th>
 <th style="text-align: right;"><span>HTTP/2 Upgrade Mechanism</span></th>
+<th style="text-align: right;"><span>Total</span></th>
 </tr>
 </thead>
 <tbody>
@@ -233,21 +205,25 @@ The following table shows the number of domains that support HTTP/1.1, HTTP/2 pr
 <th style="text-align: right;"><span>156 316 (18.62%)</span></th>
 <th style="text-align: right;"><span>20 973 (2.50%)</span></th>
 <th style="text-align: right;"><span>5227 (0.62%)</span></th>
+<th style="text-align: right;"><span>839 393</span></th>
 </tr>
 <tr>
 <th style="text-align: left;"><span>CitizenLab China</span></th>
 <th style="text-align: right;"><span>96 (19.35%)</span></th>
 <th style="text-align: right;"><span>24 (4.84%)</span></th>
 <th style="text-align: right;"><span>3 (0.60%)</span></th>
+<th style="text-align: right;"><span>496</span></th>
 </tr>
 <tr>
 <th style="text-align: left;"><span>CitizenLab Iran</span></th>
 <th style="text-align: right;"><span>161 (21.52%)</span></th>
 <th style="text-align: right;"><span>47 (6.28%)</span></th>
 <th style="text-align: right;"><span>13 (1.74%)</span></th>
+<th style="text-align: right;"><span>749</span></th>
 </tr>
 </tbody>
 </table><br>
+</div>
 
 Below, we detail our test vectors and servers' support for each HTTP version we evaluated.
 
@@ -379,3 +355,4 @@ While server support for unencrypted HTTP/2 is low, we showed that a non-negligi
 To aid future evaluations of servers' support for unencrypted HTTP/2, we developed a tool and made it accessible on [GitHub](https://github.com/UPB-SysSec/Does-It-Support-Unencrypted-Http).
 Feel free to use it or contact us for further discussion and future work.
 We hope that our contributions aid affected people and the censorship circumvention community.
+Note that unencrypted HTTP/2 does not protect your traffic; do not use it as a censorship circumvention technique when transmitting sensitive data.
