--- a/_posts/2024-10-31-http2.md
+++ b/_posts/2024-10-31-http2.md
@@ -182,7 +182,7 @@ In China and Iran, any server that supports unencrypted HTTP/2 can be accessed w
 To determine servers' support for unencrypted HTTP, we tested domains from three lists:
 We selected domains from [Tranco top one million](https://tranco-list.eu/list/KJWPW), the CitizenLab [test list for China](https://github.com/citizenlab/test-lists/commit/80087aa), and the CitizenLab [test list for Iran](https://github.com/citizenlab/test-lists/commit/e9e3bfb).
 The Tranco top one million list contains domains popular worldwide; the Citizenlab lists contain domains censored in the respective country.
-Some domains were unresolvable or did not open a TCP socket; we excluded them from our evluations.
+Some domains were unresolvable or did not open a TCP socket; we excluded them from our evaluations.
 
 To each reachable website, we sent a GET request on the path `/` with either HTTP/1.1, HTTP/2 prior knowledge, or the HTTP/2 upgrade mechanism.
 We followed all redirects to other HTTP websites and considered a server to support the used HTTP version if it responded with a `200 OK` using the desired HTTP version.
